--- a/package.json
+++ b/package.json
@@ -60,7 +60,15 @@
   "pre-commit": "lint:staged",
   "babel": {
     "plugins": [
-      "styled-components"
+      "styled-components",
+      ["react-css-modules", {
+        "filetypes": {
+          ".scss": {
+            "syntax": "postcss-scss"
+          }
+        },
+        "webpackHotModuleReloading": true
+      }]
     ],
     "presets": [
       [
@@ -144,6 +152,7 @@
     ]
   },
   "dependencies": {
+    "babel-plugin-react-css-modules": "^3.4.2",
     "babel-polyfill": "6.26.0",
     "chalk": "^2.4.1",
     "compression": "1.7.2",
@@ -192,6 +201,7 @@
     "babel-plugin-transform-react-remove-prop-types": "0.4.13",
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
+    "babel-preset-react-es2015": "^1.3.0",
     "babel-preset-stage-0": "6.24.1",
     "circular-dependency-plugin": "5.0.2",
     "coveralls": "3.0.1",
@@ -225,6 +235,7 @@
     "null-loader": "0.1.1",
     "offline-plugin": "5.0.5",
     "plop": "2.0.0",
+    "postcss-scss": "^2.0.0",
     "pre-commit": "1.2.2",
     "prettier": "1.13.5",
     "react-test-renderer": "16.4.1",
